[feat] 앱 사용간 위치허용

--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>앱을 열때만 위치정보 허용</string>
 </dict>
 </plist>
